--- a/final_project/site-plan.html
+++ b/final_project/site-plan.html
@@ -31,11 +31,9 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="https://github.com/Carter-Baumgart/wdd130/blob/be97ef1989b275f2a5f80c910593f28398d7b451/final_project/images/Head%20Hunters.png" alt="Logo image">
+      <img src="https://github.com/Carter-Baumgart/wdd130/blob/main/final_project/images/Head%20Hunters.png" alt="Head Hunters"  />
       <hr>
-      <h2>
-        Style Guide
-      </h2>
+      <h2>Style Guide</h2>
 
       <!-- ------------------------Steps 4-8------------------------------ -->
 
@@ -45,7 +43,8 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/b9c2c4-3d3d3d-947f57-e8e8e8-ffffff" target="_blank">https://coolors.co/b9c2c4-3d3d3d-947f57-e8e8e8-ffffff</a>
+      Palette URL: <a href="https://coolors.co/b9c2c4-3d3d3d-947f57-e8e8e8-ffffff" 
+      target="_blank">https://coolors.co/b9c2c4-3d3d3d-947f57-e8e8e8-ffffff</a>
 
 
       <table class="colors">
