--- a/final_project/site-plan.html
+++ b/final_project/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="https://github.com/Carter-Baumgart/wdd130/blob/main/final_project/images/Head%20Hunters.png" alt="Head Hunters"  />
+      <img src="images/head_hunters.png" alt="Head Hunters"  />
       <hr>
       <h2>Style Guide</h2>
 
