--- a/final_project/site-plan.html
+++ b/final_project/site-plan.html
@@ -87,8 +87,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Services</a>
+        <a href="#">Contact Us</a>
       </nav>
       <hr>
       <h2>
@@ -99,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Services
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          About Us
         </div>
 
         <div class="top">
@@ -131,7 +131,7 @@
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Services</h3>
       <p>
         [Written copy for the Page 2 here]
       </p>
@@ -140,7 +140,7 @@
         <img src="#" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>About Us</h3>
       <p>
         [Written copy for the Page 3 here]
       </p>
