W08 Personal Site Content

--- a/final_project/site-plan.html
+++ b/final_project/site-plan.html
@@ -145,8 +145,8 @@
         [Written copy for the Page 3 here]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/blake.jpg" alt="Blake's Profile Pic">
+        <img src="images/gsu_logo.png" alt="image for page3">
 
       </ul>
       <hr>
