--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rivers | Dry Oar Boating | Home</title>
+    <title>Whitewater Rafting Vacations | Dry Oar Boating | Rivers</title>
 </head>
 <body>
 <header>
@@ -17,10 +17,14 @@
         <a href="site-plan-rafting.html">Site Plan</a>
         <a href="contactus.html">Contact Us</a>
     </nav>
-<body>
-    <section>
-        <h2> Main Fork of the Salmon River, Idaho </h2>
-        <img src="images/salmon_river.jpg" alt="Salmon river">
+</header>
+<div id = "rivers_page_title">
+    <h1 class="rivers_title">Our Rivers</h1>
+</div>
+<main class="river-grid">
+    <section class="salmon_river_text">
+        <img class="salmon_river_img" src="images/salmon_river.jpg" alt="river in forest">
+        <h2>Main Fork of the Salmon River, Idaho</h2>
         <p> Nestled deep in the Frank Church Wilderness of No Return winds 
             the Salmon river. The Salmon was given the nickname long ago 
             as the River of No Return by the people living near it because 
@@ -38,9 +42,10 @@
             families with children who like to swim tend to appreciate the late 
             summer's slower, warmer water more.</p>
     </section>
-    <section>
+
+    <section class="desolation_canyon_text">
+        <img class="desolation_canyon_img" src="images/desolation_canyon.jpg" alt="desolation_canyon_river">
         <h2> Desolation and Gray Canyon, Utah </h2>
-        <img src="images/desolation_canyon.jpg" alt="desolation_canyon river">
         <p> Winding through canyons in central Utah, in some of the most 
             desolate land anywhere, the Green river flows towards the mighty 
             Colorado river and the sea. High grey stone cliffs, beautiful 
@@ -53,10 +58,11 @@
             Desolation Canyon has been recognized as a National Landmark. 
             This designation is based on the uniqueness and rich history that 
             the canyon tells.</p>
-    </section>
-    <section>
+    </section>    
+    
+    <section class="grand_canyon_text">
+        <img class="grand_canyon_img" src="images/grand_canyon.jpg" alt="grand_canyon_river">
         <h2> Grand Canyon, Arizona </h2>
-        <img src="images/grand_canyon.jpg" alt="desolation_canyon river">
         <p> This is the grand daddy of all canyons and the grand daddy of all 
             river trips. You will never forget your visit to the Grand Canyon. 
             Grand Canyon river rafting combines world-class whitewater with 
@@ -68,8 +74,8 @@
             accommodate such a wide variety of rapids and river variances. 
             However, most people are familiar with the regular I - V river rating 
             scale, so we often refer to both.</p>
-    </section>
-</body>
+    </section>   
+</main>
 <footer>
     <p>Dry Oar &copy; 2023 - Carter Baumgart</p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
