--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -13,11 +13,16 @@
     </a>
     <nav>
         <a href="index.html">Home</a>
-        <a href="#">Rivers</a>
+        <a href="rivers.html">Rivers</a>
         <a href="site-plan-rafting.html">Site Plan</a>
         <a href="contactus.html">Contact Us</a>
     </nav>
 </header>
+<div id="hero">
+    <div id="hero-box">
+        <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+    </div>
+</div>
 <div id = "rivers_page_title">
     <h1 class="rivers_title">Our Rivers</h1>
 </div>
