The Sauce is the Boss

--- a/final_project/site-plan.html
+++ b/final_project/site-plan.html
@@ -14,6 +14,13 @@
       <h2>Carter Baumgart</h2>
       <h2>WDD 130-A1</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="about-us.html">About Us</a>
+        <a href="site-plan.html">Site Plan</a>
+        <a href="contactus.html">Contact Us</a>
+    </nav>
     </header>
     <main>
 
@@ -165,7 +172,7 @@
           
         <p>To get started, click on the Salary Guide to download an example of what things could look like for you.</p>
         <p>Additionally, feel free to check out our Job positions list availible in each city.</p>
-        <p>With our commitment to excellence and a track record of successful placements, Head Huners is the partner you 
+        <p>With our commitment to excellence and a track record of successful placements, Head Hunters is the partner you 
           need to excel in the world of professional recruitment. Your success is our success, and we're here to make it happen.</p>
 
       </p>
