--- a/final_project/index.html
+++ b/final_project/index.html
@@ -15,7 +15,6 @@
         <a href="index.html">Home</a>
         <a href="services.html">Services</a>
         <a href="about-us.html">About Us</a>
-        <a href="site-plan.html">Site Plan</a>
         <a href="contactus.html">Contact Us</a>
     </nav>
 </header>
@@ -53,6 +52,7 @@
 </main>
 <footer>
     <p>Head Hunters &copy; 2023 - Carter Baumgart</p>
+    <p><a href="site-plan.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
