--- a/final_project/index_safety.html
+++ b/final_project/index_safety.html
@@ -24,7 +24,7 @@
     </div>
     <section id="home-msg">
         <h1 class="home-title">Head Hunters</h1>
-        <h4>Your gatewaty to top-tier talent and career opportunities.</h4>
+        <h4>Your gateway to top-tier talent and career opportunities.</h4>
     <div id="prof-img">
         <img class="professional" src="images/professional.jpg" alt="Professional looking out window" width="350" height="500">
     </div>
