--- a/final_project/index_safety.html
+++ b/final_project/index_safety.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 <header>
-    <a id="logo_link" href="index.html">
+    <a id="logo_link" href="index_safety.html">
         <img class="logo" src="images/head_hunters.png" alt="Head Hunters Logo">
     </a>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="index_safety.html">Home</a>
         <a href="services.html">Services</a>
         <a href="about-us.html">About Us</a>
         <a href="contactus.html">Contact Us</a>
@@ -25,30 +25,23 @@
     <section id="home-msg">
         <h1 class="home-title">Head Hunters</h1>
         <h4>Your gateway to top-tier talent and career opportunities.</h4>
-    <div id="prof-img">
-        <img class="professional" src="images/professional.jpg" alt="Professional looking out window" width="350" height="500">
-    </div>
+    <section class="msg">
+        <p>At Head Hunters, we are dedicated to connecting the best professionals with the right 
+              organizations, shaping the future of industries, one placement at a time. Whether you're an exceptional 
+              candidate looking to embark on your next career adventure or a forward-thinking company seeking top-notch 
+              talent to fuel your success, you've come to the right place.</p>
+    </section>  
     </section>
-    
 </div>
 <main class="home-grid">
-    <section class="msg">
-        <h4><strong>Welcome to Head Hunters, your gateway to top-tier talent and career opportunities!</strong></h4>
-
-        <p>At Head Hunters, we are dedicated to connecting the best professionals with the right 
-          organizations, shaping the future of industries, one placement at a time. Whether you're an exceptional 
-          candidate looking to embark on your next career adventure or a forward-thinking company seeking top-notch 
-          talent to fuel your success, you've come to the right place.</p>
-    </section>  
-
     <section class="side-msg">
         <p>Our commitment to excellence in professional recruiting is second to none. With years of experience and a 
             passion for matching talent with opportunity, we will make sure you get what you are looking for. 
             Our comprehensive approach, deep industry expertise, and personalized service ensure 
             that every placement we make is a win-win for everyone involved. </p>
         <a class='services' href="services.html">Learn More</a>
-    </section>
-
+    </section>     
+    <img class="professional" src="images/professional.jpg" alt="Professional looking out window" >
     <section class="bottom-msg">
         <p>Explore our website to discover how we can help you achieve your career goals or find the perfect addition 
             to your team or visit our About us Page to learn more about our outstanding team</p>
