Profile Card Component

--- a/final_project/about-us.html
+++ b/final_project/about-us.html
@@ -1,37 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles/hh-styles.css">
+    <link rel="stylesheet" href="styles/hh-styles-safety.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Head Hunters | Professional Recruiting | About Us</title>
 </head>
 <body>
 <header>
-    <a id="logo_link" href="index.html">
+    <a id="logo_link" href="index_safety.html">
         <img class="logo" src="images/head_hunters.png" alt="Head Hunters Logo">
     </a>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="index_safety.html">Home</a>
         <a href="services.html">Services</a>
         <a href="about-us.html">About Us</a>
         <a href="contactus.html">Contact Us</a>
     </nav>
 </header>
-<main class="home-grid">
-        <p><strong>About Our Team</strong></p>
 
-        <img class="Bio" img src="images/blake.jpg" alt="Portrait">
-        <section class="upper_msg">
-            <p><strong>INSERT STATEMENT FROM BROTHER (Include resume information and work experience Part 1 (Coming Thanksgiving week))</strong></p>
-        </section>
+<section class="title-msg">
+    <p><strong>About Our Team</strong></p>
+</section>
 
-        <img class="school" img src="images/gsu_logo.png" alt="School Logo">
-        <section class="lower_msg">
-            <p><strong>INSERT STATEMENT FROM BROTHER (Include resume information and work experience Part 2 (Coming Thanksgiving week))</strong></p>
-        </section>
+<main class="about-us-grid">
 
-        <p>PERSONAL PROMISE (Coming Thanksgiving Week) </p>
+    <section class="promise_msg">
+        <p>As a recruiter, I will carefully listen to your job goals and will seek to 
+            pair those with increased economic goals. A great recruiter understands that 
+            our business is relationship based and not a transaction and I hope you will 
+            enjoy the process.</p>
+    </section>
+
+    <div class="bio_card">
+        <img src="images/blake.jpg" alt="Blake" style="width:100%">
+        <h1>Blake Baumgart</h1>
+        <p class="title">CEO & Founder</p>
+        <p>Georgia State University</p>
+        <!-- Do I WANT CONTACT REDIRECT THOUGH? <button onclick="a href='contactus.html'">Contact</button> -->
+        </div>
+
+    <img class="school" img src="images/gsu_logo.png" alt="School Logo">
+    <section class="school_msg">
+        <p>Graduating from Georgia State University with a BS in Accounting, 
+            I became an Executive Recruiter in Accounting and Finance because I love 
+            to connect people with opportunities that bring them happiness and success. 
+            We perform searches at three levels—executive, middle management and staff 
+            associate. Our clients rely on us for custom solutions to meet their needs, 
+            and we bring together our knowledge, expertise and responsiveness to form 
+            and maintain enduring relationships.</p>
+    </section>
+
 </main>
 <footer>
     <p>Head Hunters &copy; 2023 - Carter Baumgart</p>
