--- a/final_project/index_safety.html
+++ b/final_project/index_safety.html
@@ -15,7 +15,7 @@
         <a href="index_safety.html">Home</a>
         <a href="services.html">Services</a>
         <a href="about-us.html">About Us</a>
-        <a href="contactus.html">Contact Us</a>
+        <a href="contact-us.html">Contact Us</a>
     </nav>
 </header>
  <div id="home">
@@ -42,13 +42,14 @@
         <a class='services' href="services.html">Learn More</a>
     </section>     
     <img class="professional" src="images/professional.jpg" alt="Professional looking out window" >
-    <section class="bottom-msg">
-        <p>Explore our website to discover how we can help you achieve your career goals or find the perfect addition 
-            to your team or visit our About us Page to learn more about our outstanding team</p>
-        <p><strong>Professional Recruiting - For Professionals - Done Professionally</strong></p>
-    </section>
-   
 </main>
+
+<section class="bottom-msg">
+    <p>Explore our website to discover how we can help you achieve your career goals or find the perfect addition 
+        to your team or visit our About us Page to learn more about our outstanding team</p>
+    <p><strong>Professional Recruiting - For Professionals - Done Professionally</strong></p>
+</section>
+
 <footer>
     <p>Head Hunters &copy; 2023 - Carter Baumgart</p>
     <p><a href="site-plan.html">Site Plan</a></p>
