--- a/final_project/services.html
+++ b/final_project/services.html
@@ -15,7 +15,7 @@
         <a href="index_safety.html">Home</a>
         <a href="services.html">Services</a>
         <a href="about-us.html">About Us</a>
-        <a href="contactus.html">Contact Us</a>
+        <a href="contact-us.html">Contact Us</a>
     </nav>
 </header>
 
