--- a/final_project/services.html
+++ b/final_project/services.html
@@ -50,10 +50,9 @@
 <section class="bottom-msg">
     <hr>                      
     <p>To get started, click on the Salary Guide to download an example of what things could look like for you.</p>
-    <a class='salaries' href=<!theoretical download> Salary Guide</a>
-
+    <a class='salaries' href="images/theoretical_download_file_for_final.xlsx">Salary Guide</a>
     <p>Additionally, feel free to check out our Job positions list availible in each city.</p>
-    <a class='Jobs_Search' href=<!theoretical link> Jobs Search</a>
+    <a class='Jobs_Search' href="images/theoretical_download_file_for_final.xlsx">Jobs Search</a>
     <hr>      
     <p><Strong>With our commitment to excellence and a track record of successful placements, Head Hunters is the partner you 
         need to excel in the world of professional recruitment. Your success is our success, and we're here to make it happen.</Strong></p>    
