--- a/final_project/about-us.html
+++ b/final_project/about-us.html
@@ -42,7 +42,7 @@
         <!-- Do I WANT CONTACT REDIRECT THOUGH? <button onclick="a href='contactus.html'">Contact</button> -->
     </div>
 
-    <img class="school" img src="images/gsu_logo.png" alt="School Logo">
+    <img class="school" src="images/gsu_logo.png" alt="School Logo">
     <section class="school_msg">
         <p>Graduating from Georgia State University with a BS in Accounting, 
             I became an Executive Recruiter in Accounting and Finance because I love 
