--- a/final_project/services.html
+++ b/final_project/services.html
@@ -22,7 +22,7 @@
 
 <section class="services-msg">
     <p><strong>Our Professional Recruiting Services</strong></p>            
-    <img class="meeting_table" img src="images/meeting_table.jpg" alt="Image of people meeting at a table" width="500" height="300">
+    <img class="meeting_table" src="images/meeting_table.jpg" alt="Image of people meeting at a table" width="500" height="300">
     <p>At Head Hunters, we offer a comprehensive range of professional recruiting services designed to meet 
     the unique staffing needs of businesses and career aspirations of candidates. With our expertise and commitment 
     to excellence, we provide the following services:</p>
@@ -30,7 +30,7 @@
 
 <main class="services-grid">
 
-    <img class="handshake" img src="images/handshake.jpg" alt="Handshake" width="350" height="500">
+    <img class="handshake" src="images/handshake.jpg" alt="Handshake" width="350" height="500">
         
     <section class="services_offered">
         <p><strong>Executive Search:</strong> We specialize in finding top-tier executive talent who can lead your 
